fix some section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ header {
 #portfolio {
     background: url(https://wallpaperscraft.com/image/keyboard_button_bw_enter_31023_1920x1080.jpg) no-repeat center center fixed;
     width: 100%;
+    min-height: 700px;
     height: 100vh;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -107,8 +108,6 @@ blockquote {
     color: #383838;
     background-color: #fff;
 }
-
-blockqout
 
 blockquote cite {
     color: #999999;
